--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,21 +1,58 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "tailwindcss";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+@theme {
+ /* --max-width: 70rem;*/
+  --max-width: 1120px;
+  --breakpoint-xl: 90rem;
+
+  --color-primary: #FF6600;
+  --color-primary-dark: #112331;
+  --color-btn-green: #25CC13;
+  --color-800: #323232;
+
+  --text-title: 2.25rem;
+  --text-title--line-height: 2.5rem;
+
+  --text-benefits: 2.1875rem;
+  --text-benefits--line-height: 2.5rem;
+
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+@layer components {
+  .btn {
+    @apply inline-flex h-[42px] items-center px-6 text-base font-medium text-white text-center bg-btn-green transition duration-200 border border-btn-green hover:bg-transparent hover:text-btn-green;
   }
-}
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  .btn-large {
+    @apply w-full h-[65px] px-8 py-3.5 bg-btn-green justify-center items-center cursor-pointer inline-flex overflow-hidden text-center text-white text-lg font-semibold uppercase transition duration-200 border border-btn-green hover:bg-transparent hover:text-btn-green
+  }
+
+  .btn-secondary {
+    @apply w-full h-[65px] px-8 py-3.5 bg-primary-dark justify-center items-center cursor-pointer inline-flex overflow-hidden text-center text-white text-lg font-semibold uppercase transition duration-200 border border-primary-dark hover:bg-transparent hover:text-primary-dark
+  }
+
+  .btn-pro {
+    @apply w-full h-[65px] px-8 py-3.5 bg-transparent justify-center items-center cursor-pointer inline-flex overflow-hidden text-center text-white text-lg font-semibold uppercase transition duration-200 border border-primary hover:bg-primary hover:text-white
+  }
+
+  .hamburger {
+    @apply cursor-pointer flex flex-col gap-1;
+    span {
+      @apply block w-5 h-0.5 bg-white rounded transition-all duration-300;
+    }
+
+    &.open {
+      span {
+        &:nth-child(1) {
+          @apply translate-y-1 rotate-45;
+        }
+        &:nth-child(2) {
+          @apply opacity-0;
+        }
+        &:nth-child(3) {
+          @apply -translate-y-2 -rotate-45;
+        }
+      }
+    }
+  }
 }
